--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,2 +1,5 @@
-name=Scala Seed Project
+name=My Akka HTTP Project
 description=A minimal Scala project.
+scala_version=2.12.4
+#akka_http_version=10.0.11
+#akka_version=2.5.8
