--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-name=My Akka HTTP Project
+name=my-project-name
 description=A minimal Scala project.
 scala_version=2.12.4
 #akka_http_version=10.0.11
