--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name=my-project-name
 description=A minimal Scala project.
 scala_version=2.12.6
-#akka_http_version=10.0.11
-#akka_version=2.5.8
+akka_http_version=10.1.3
+akka_version=2.5.14
